# file-storage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.storage.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
app/: auth.py  categories.py  config.py  db.py  keys.py  main.py  models.py  routes.py  schemas.py  service.py  storage.py
app/static/: index.html
docs/: DESIGN.md  PLAN.md
scripts/: release.sh
tests/: conftest.py  test_auth.py  test_categories.py  test_health.py  test_index_page.py  test_keys.py  test_models.py  test_routes.py  test_service.py  test_storage_integration.py
